# DeepCompFedL

./: .gitignore  README.md  interface.py  pyproject.toml  run_compare_pruning.sh  run_exp1_resnet12.sh  run_exp1_resnet18.sh  run_exp1bis.sh  run_exp2.sh  run_exp2_qresnet12.sh  run_exp2_resnet12.sh  run_exp2_resnet18.sh  run_exp2b_resnet12.sh  run_exps.sh  run_fcp_scenario1.sh  run_fcp_scenario2.sh  run_fcp_scenario3.sh  run_fcp_scenario4.sh  run_full_compression.sh  run_hyperparameters.sh  run_pruning_layerormodel.sh  run_pruning_resnet12.sh  run_pruning_resnet18.sh  run_quant_parameters.sh  run_quant_qat.sh  run_quant_resnet18.sh  run_resnet12_femnist_net.sh  run_resnet12_mnist.sh
deepcompfedl/: .gitignore  README.md  __init__.py  client_app.py  pyproject.toml  server_app.py  task.py
deepcompfedl/compression/: decoding.py  encoding.py  metrics.py  pruning.py  quantization.py  utils.py
deepcompfedl/deepcompfedl/: client_app.py  server_app.py  task.py
deepcompfedl/models/: net.py  qresnet12.py  qresnet18.py  qresnets.py  resnet12.py  resnet18.py  resnets.py
deepcompfedl/strategy/: DeepCompFedLStrategy.py  MyStrategy.py
deepcompfedl/tests/: README.md  distribution.py  path.py  saveandzip.py  sizeofmodel.py
deepcompfedl/tests/free/: distribution.py  path.py  plotnfit.py  plotnfit_hyperparameters.py  plotnfit_resnet18.py  saveandzip.py  sizeofmodel.py
deepcompfedl/tests/plot_figures/: 1st-order.py  README.md  accuracy_last_vs_predict.py  plot_curves.py  plotnfit_brevitas.py  plotnfit_femnist.py  plotnfit_pruning.py  plotnfit_ptq-initspace.py  plotnfit_ptq-layervsmodel.py  plotnfit_ptq-vsqat.py  plotnfit_scenario1.py  plotnfit_scenario2.py  plotnfit_scenario3.py  plotnfit_scenario4.py  plotnfit_scenario_n.py  script.py
deepcompfedl/tests/unit/: compression.py  test_compression.py  test_models.py  test_quantization.py
