[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deepcompfedl"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.10.0",
    "flwr-datasets[vision]>=0.3.0",
    "torch==2.2.1",
    "torchvision==0.17.1",
    "scipy>=1.14.1",
    "scikit-learn>=1.5.2"
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "elouan50"

[tool.flwr.app.components]
serverapp = "deepcompfedl.server_app:app"
clientapp = "deepcompfedl.client_app:app"

[tool.flwr.app.config]
server-rounds = 3
server-fraction-fit = 0.5
server-pruning-rate = 0.25       # not used
server-bits-quantization = 4     # not used
aggregation-algorithm = "FedAvg" # not used
client-epochs = 5
client-pruning-rate = 0.25
client-bits-quantization = 4

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10
options.backend.client-resources.num-cpus = 32
options.backend.client-resources.num-gpus = 1
