[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deepcompfedl"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.10.0",
    "flwr-datasets[vision]>=0.3.0",
    "torch>=2.2.1",
    "torchvision>=0.17.1",
    "scipy>=1.14.1",
    "scikit-learn>=1.5.2",
    "pympler>=1.1",
    "wandb>=0.19.6"
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "elouan50"

[tool.flwr.app.components]
serverapp = "deepcompfedl.server_app:app"
clientapp = "deepcompfedl.client_app:app"

[tool.flwr.app.config]
server-rounds = 3
server-enable-pruning = false
server-pruning-rate = 0.25
server-enable-quantization = false
server-bits-quantization = 32
aggregation-strategy = "FedAvg"
client-epochs = 1
client-enable-pruning = false
client-pruning-rate = 0.25
client-enable-quantization = false
client-bits-quantization = 32
model = "Net"
dataset = "CIFAR-10"
fraction-fit = 0.2
alpha=100
number=1

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 100
options.backend.client-resources.num-cpus = 32
options.backend.client-resources.num-gpus = 1
